--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       href="./public/img/evan.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="./public/css/preflight.css" />
-    <link rel="stylesheet" href="./public/css/style.css" />
-    <link rel="stylesheet" href="./public/css/utilities.css" />
+    <link rel="stylesheet" href="./preflight.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./utilities.css" />
   </head>
   <body>
     <main>
@@ -69,7 +69,7 @@
       <span>&copy; 2024 evanalifian</span>
     </footer>
 
-    <script src="./public/js/dom.js" type="module"></script>
-    <script src="./public/js/fetch-data.js" type="module"></script>
+    <script src="./dom.js" type="module"></script>
+    <script src="./fetch-data.js" type="module"></script>
   </body>
 </html>
